@@ -1,5 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+
+== 11/09/2014 ==
+Kayen: Implemented support for spell target type (45) 'Target Rings' on Underfoot (does work earlier expansions)
+Thanks to Lecht for figuring out the op_code side.
+
 == 11/06/2014 ==
 demonstar55: Tracking default sort will now be correct order
 Trevius: Fixed dynamic merchant list loading.  Allows any merchant to be used in any zone.
